Ribbon vertical alignment fixed, file structure for Projects and Project done

--- a/src/app/Ribbon/index.scss
+++ b/src/app/Ribbon/index.scss
@@ -4,6 +4,7 @@
     background: url('./app/img/ribbon.svg');
     background-size: 100%;
     margin: 30px 0 0 -16px;
+    display: inline-block;
 
     .title {
         margin-top: 17px;
